--- a/app/assets/stylesheets/modules/_timeline.styl
+++ b/app/assets/stylesheets/modules/_timeline.styl
@@ -87,6 +87,7 @@
 
 .block__block-content
   color $text_dk
+  word-break break-word
 
 .block.block--orderable
   display flex
